# julia-vm-oss

./: .gitignore  Cargo.toml  README.md
subset_julia_vm/: Cargo.toml  build.rs
subset_julia_vm/src/: api.rs  base_loader.rs  builtins.rs  bytecode.rs  cancel.rs  intrinsics.rs  ir.json  lib.rs  loader.rs  pipeline.rs  rng.rs  span.rs  stdlib_loader.rs  unicode.rs
subset_julia_vm/src/aot/: call_graph.rs  mod.rs  types.rs
subset_julia_vm/src/aot/analyze/: bytecode_analyzer.rs  loader.rs  mod.rs  tests.rs
subset_julia_vm/src/aot/codegen/: ir_codegen.rs  mod.rs
subset_julia_vm/src/aot/inference/: mod.rs  tests.rs  types.rs
subset_julia_vm/src/aot/ir/: aot_types.rs  basic_types.rs  mod.rs  ops.rs  tests.rs
subset_julia_vm/src/aot/optimizer/: constant_folding.rs  cse.rs  dce.rs  inlining.rs  loop_opt.rs  mod.rs  pass.rs  strength_reduction.rs
subset_julia_vm/src/compile/: base_functions.rs  base_merge.rs  bridge.rs  cache.rs  collect.rs  constants.rs  context.rs  core_compiler.rs  diagnostics.rs  embedded_cache.rs  free_vars.rs  inference.rs  method_table.rs  mod.rs  peephole.rs  precompile.rs  promotion.rs  stmt.rs  test_helpers.rs  type_helpers.rs  types.rs  utils.rs
subset_julia_vm/src/compile/abstract_interp/: conditional.rs  env.rs  loop_analysis.rs  mod.rs  struct_info.rs  usage_analysis.rs
subset_julia_vm/src/compile/const_prop/: eval.rs  mod.rs
subset_julia_vm/src/compile/effects/: inference.rs  mod.rs  propagation.rs
subset_julia_vm/src/compile/expr/: builtin.rs  builtin_array.rs  builtin_hof.rs  mod.rs  (+9 more)
subset_julia_vm/src/error/: include.rs  mod.rs  syntax.rs  unsupported.rs
subset_julia_vm/src/ffi/: basic.rs  demo.rs  detailed.rs  error.rs  format.rs  mod.rs  repl_ffi.rs  unicode_ffi.rs
subset_julia_vm/src/include/: mod.rs
subset_julia_vm/src/ir/: core.rs
subset_julia_vm/src/julia/: mod.rs
subset_julia_vm/src/lowering/: abstract_.rs  macros_registry.rs  mod.rs  struct_.rs
subset_julia_vm/src/parser/: cst.rs  mod.rs  span.rs
subset_julia_vm/src/repl/: converters.rs  globals.rs  mod.rs  session.rs  tests.rs
subset_julia_vm/src/types/: dispatch_error.rs  mod.rs  tests.rs  type_expr.rs  type_param.rs
subset_julia_vm/src/vm/: broadcast.rs  builtins_arrays.rs  builtins_collections.rs  builtins_dicts.rs  builtins_equality.rs  builtins_exec.rs  builtins_io.rs  builtins_linalg.rs  builtins_math.rs  builtins_numeric.rs  builtins_stats.rs  builtins_strings.rs  builtins_types.rs  builtins_types_conversion.rs  convert.rs  error.rs  field_indices.rs  formatting.rs  frame.rs  instr.rs  intrinsics_exec.rs  mod.rs  profiler.rs  slot.rs  splat.rs  stack_ops.rs  type_utils.rs  types.rs  util.rs
subset_julia_vm/tests/: aot_e2e_tests.rs  base_exports_consistency_tests.rs  broadcast_dispatch_analysis_tests.rs  bytecode_aot_tests.rs  code_samples_tests.rs  dispatch_tests.rs  fixture_tests.rs  include_tests.rs  integration_array_tests.rs  integration_compile_sample_tests.rs  integration_dict_broadcast_tests.rs  integration_module_base_tests.rs  integration_string_type_tests.rs  integration_struct_hof_tests.rs  ios_samples_tests.rs  mandelbrot_coordinate_comparison_test.rs  mandelbrot_coordinate_test.rs  mandelbrot_debug_test.rs  panic_free_vm_tests.rs  parser_pure_rust.rs  test_if_elseif_else.rs  test_mandelbrot_grid_comparison.rs  test_randn.rs  test_try_debug.rs  type_propagation_call_tests.rs  unicode_tests.rs
subset_julia_vm/tests/base/: run_all.sh  test_array.jl  test_bool.jl  test_intfuncs.jl  test_math.jl  test_number.jl  test_operators.jl  test_set.jl  test_sort.jl  test_statistics.jl
subset_julia_vm/tests/common/: mod.rs
subset_julia_vm/tests/fixtures/: manifest.toml  point_operators.jl  point_test.jl
subset_julia_vm/tests/stdlib/: run_all.sh  test_InteractiveUtils.jl  test_Random.jl  test_Statistics.jl
subset_julia_vm_parser/: Cargo.toml
subset_julia_vm_parser/src/: cst.rs  error.rs  lexer.rs  lib.rs  span.rs
subset_julia_vm_parser/src/node_kind/: convert.rs  mod.rs  predicates.rs  tests.rs
subset_julia_vm_parser/src/parser/: collections.rs  literals.rs  mod.rs
subset_julia_vm_parser/src/token/: mod.rs  precedence.rs  tests.rs
subset_julia_vm_parser/tests/: corpus_collections.rs  corpus_definitions.rs  corpus_expressions.rs  corpus_literals.rs  corpus_operators.rs  corpus_statements.rs  cst_api_tests.rs  nodekind_coverage_tests.rs  nodekind_documentation_tests.rs  parser_ast_structure_tests.rs  parser_dispatch_tests.rs  parser_tests.rs
subset_julia_vm_web/: Cargo.toml  README.md
subset_julia_vm_web/src/: lib.rs
(+1790 files in other folders)
