[package]
name = "subset_julia_vm"
version = "0.6.6"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
wasm = ["dep:js-sys"]
repl = ["dep:rustyline"]
aot = ["dep:subset_julia_vm_runtime", "dep:thiserror"]
cranelift = ["aot", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-jit", "dep:target-lexicon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subset_julia_vm_parser = { path = "../subset_julia_vm_parser" }
sha2 = "0.10"
once_cell = "1.19"
toml = "0.9"
js-sys = { version = "0.3", optional = true }
rustyline = { version = "17", optional = true }
tempfile = { version = "3", optional = true }
subset_julia_vm_runtime = { path = "../subset_julia_vm_runtime", optional = true }
thiserror = { version = "1.0", optional = true }
cranelift-codegen = { version = "0.115", optional = true }
cranelift-frontend = { version = "0.115", optional = true }
cranelift-module = { version = "0.115", optional = true }
cranelift-jit = { version = "0.115", optional = true }
target-lexicon = { version = "0.12", optional = true }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
regex = "1.10"
half = { version = "2.4", default-features = false, features = ["serde"] }
bincode = "1"
astro-float = "0.9"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
insta = { version = "1.41", features = ["yaml"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bin]]
name = "sjulia"
required-features = ["repl"]

[[bin]]
name = "bundle"
required-features = ["tempfile"]

[[bin]]
name = "juliar"
path = "src/bin/aot.rs"
required-features = ["aot"]

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
only_used_in_recursion = "allow"
large_enum_variant = "allow"
wrong_self_convention = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
items_after_test_module = "allow"
cast_sign_loss = "warn"
