[package]
name = "subset_julia_vm_web"
version = "0.6.5"
edition = "2021"
description = "WebAssembly binding for SubsetJuliaVM - Julia subset interpreter"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Use subset_julia_vm as a path dependency, but exclude tree-sitter for WASM
# Note: We'll handle parsing on the JS side with web-tree-sitter
# This crate only needs lowering, compile, and VM execution

[dependencies.subset_julia_vm]
path = "../subset_julia_vm"
default-features = false
# tree-sitter C code doesn't compile for wasm32-unknown-unknown target
# We now use subset_julia_vm_parser (pure Rust) for parsing
features = ["wasm"]

[dependencies.subset_julia_vm_parser]
path = "../subset_julia_vm_parser"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
